# aldur-appraiser

./: .gitignore  README.md  aldur-appraiser.spec  config.toml  pyproject.toml
.github/workflows/: build-binaries.yml  build-macos-intel.yml  build-windows.yml
docs/: promo.md  temple-plan.md
packaging/flatpak/: README.md  aldur-appraiser  build.sh  bundle.sh  io.github.t0nd3.AldurAppraiser.desktop  io.github.t0nd3.AldurAppraiser.metainfo.xml  io.github.t0nd3.AldurAppraiser.yaml  python-deps.yaml  requirements.txt
scripts/: make_icon.py  make_social.py  pyinstaller_entry.py  setup.py
src/aldur_appraiser/: __init__.py  __main__.py  app.py  cli.py  config.py  desktop_hotkey.py  icons.py  parse.py  pipeline.py  resources.py  settings.py  trigger.py  updates.py  win_hotkey.py
src/aldur_appraiser/pricing/: __init__.py  cache.py  client.py  valuation.py
src/aldur_appraiser/temple/: __init__.py  advisor.py  editor.py  engine.py  icons.py  rooms.py  vision.py
src/aldur_appraiser/vision/: __init__.py  capture.py  detect.py  global_hotkey.py  ocr.py  overlay.py  portal_capture.py
tests/: test_app.py  test_detect.py  test_icons.py  test_ocr.py  test_overlay.py  test_parse.py  test_pipeline.py  test_pricing.py  test_temple_advisor.py  test_temple_editor.py  test_temple_engine.py  test_temple_rooms.py  test_temple_vision.py  test_trigger.py  test_updates.py  test_win_hotkey.py
