[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aldur-appraiser"
version = "0.2.4"
description = "Passive read-only PoE2 reward-valuation overlay (Runes of Aldur)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Benjamin" }]

# Phase-1 core deps only: pricing is fully platform-independent (pure-Python wheels).
dependencies = [
    "httpx>=0.27",
    "platformdirs>=4.0",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
# Vision/overlay half — added in later phases. Kept optional so the pricing core
# installs cleanly everywhere (incl. Python versions without onnxruntime wheels yet).
vision = [
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
    "mss>=9.0",
    "pillow>=10.0",
    # 1.3+ caps at Python <3.13; 1.2.3 is the newest that supports 3.14.
    "rapidocr-onnxruntime>=1.2,<2",
]
# Optional OCR fallback; requires the tesseract binary on the system.
tesseract = ["pytesseract>=0.3.10"]
# Overlay HUD. Qt (pip wheel, no system dependency) — tkinter isn't shipped on
# atomic distros and needs a system layer; Qt also handles frameless/always-on-
# top/translucent/click-through better on Wayland.
overlay = ["PySide6-Essentials>=6.6"]
dev = ["pytest>=8.0", "ruff>=0.4"]
# Frozen Windows build (used in CI).
build = ["pyinstaller>=6.6"]

[project.scripts]
appraiser = "aldur_appraiser.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aldur_appraiser"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
